Fix alignment

--- a/css/general.css
+++ b/css/general.css
@@ -1065,11 +1065,15 @@ color: #ECEBEB;
 			padding-top: 50px;
 			padding-bottom: 50px;
 			color: #f8f8f8;
-			background: url(../img/intro/intro5.jpg) no-repeat center center;
+			background: url(../img/intro/intro_mobile.jpg) no-repeat center center;
 			background-size: cover;
 			text-align: center;
 		}
 
+		.hideOnMobile{
+			display: none;
+			opacity: 0;
+		}
 		h1, .h1 {
 			font-size: 50px;
 		}
@@ -1077,22 +1081,35 @@ color: #ECEBEB;
 		h3, .h3 {
 			font-size: 20px;
 		}
-		#gallery1{display:none}
+		#gallery1{
+			display:none
+		}
 		
-		.button_down {display:none}
-		
-		
+		.button_down{
+			display:none
+		}
+
+		h2.contact{
+			margin-top: 130px !important;
+		}
 	}
 
 /* Mobile Landscape */
 @media only screen and (min-width: 480px) and (max-width: 767px) { 
 	
 	
-	
 }
 
 /* Mobile Portrait */
-@media only screen and (max-width: 479px) {
+@media only screen and (max-width: 639px) {
+	#techstack{
+		margin-top: 150px !important;
+	}
+
+	h2.contact{
+	margin-top: 120px !important;
+
+	}
 	
 	
 }
